[gd_scene load_steps=7 format=3 uid="uid://1cywl1qtanq3"]

[ext_resource type="Script" path="res://Scripts/WindowOptions/main.gd" id="1_isfow"]
[ext_resource type="Texture2D" uid="uid://dnhldrc8cymrs" path="res://pixel_art_example.webp" id="2_rlrbi"]
[ext_resource type="Texture2D" uid="uid://c43k4wledw7py" path="res://pixel_art_checkerboard_example.webp" id="3_unfpa"]
[ext_resource type="Texture2D" uid="uid://cok02ms2cxmut" path="res://pixel_art_text_example.webp" id="4_ywea5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vvbdh"]
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.501961, 1, 0.25098, 0.501961)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dyby4"]
draw_center = false
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.25, 0.38, 0.8, 0.5)

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_isfow")

[node name="OuterSideLabel" type="Label" parent="."]
modulate = Color(1, 1, 1, 0.627451)
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 165.0
offset_bottom = 60.0
text = "Outer Side Label
(ignores all margins)"
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vvbdh")

[node name="InnerSideLabel" type="Label" parent="Panel"]
modulate = Color(0.666667, 1, 0.501961, 1)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -60.0
offset_right = 246.0
offset_bottom = -8.0
grow_vertical = 0
text = "Inner Side Label
(ignores GUI Max Aspect Ratio)"
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Panel/AspectRatioContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dyby4")

[node name="TopLeft" type="ColorRect" parent="Panel/AspectRatioContainer/Panel"]
layout_mode = 0
color = Color(1, 1, 1, 0.25098)

[node name="TopRight" type="ColorRect" parent="Panel/AspectRatioContainer/Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
color = Color(1, 1, 1, 0.25098)

[node name="BottomLeft" type="ColorRect" parent="Panel/AspectRatioContainer/Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0
color = Color(1, 1, 1, 0.25098)

[node name="BottomRight" type="ColorRect" parent="Panel/AspectRatioContainer/Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
color = Color(1, 1, 1, 0.25098)

[node name="PixelArtExample" type="TextureRect" parent="Panel/AspectRatioContainer/Panel"]
texture_filter = 1
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -88.0
offset_top = 16.0
offset_right = -56.0
offset_bottom = 48.0
grow_horizontal = 0
texture = ExtResource("2_rlrbi")

[node name="PixelArtExample2" type="TextureRect" parent="Panel/AspectRatioContainer/Panel"]
texture_filter = 1
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -48.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 48.0
grow_horizontal = 0
rotation = 0.785398
pivot_offset = Vector2(16, 16)
texture = ExtResource("2_rlrbi")

[node name="PixelArtCheckerboardExample" type="TextureRect" parent="Panel/AspectRatioContainer/Panel"]
modulate = Color(1, 1, 1, 0.752941)
texture_filter = 1
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -136.0
offset_top = 16.0
offset_right = -104.0
offset_bottom = 48.0
grow_horizontal = 0
texture = ExtResource("3_unfpa")

[node name="PixelArtTextExample" type="TextureRect" parent="Panel/AspectRatioContainer/Panel"]
texture_filter = 1
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -215.0
offset_top = 56.0
offset_right = -16.0
offset_bottom = 75.0
grow_horizontal = 0
texture = ExtResource("4_ywea5")

[node name="CenterContainer" type="CenterContainer" parent="Panel/AspectRatioContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Options" type="VBoxContainer" parent="Panel/AspectRatioContainer/Panel/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="Panel/AspectRatioContainer/Panel/CenterContainer/Options"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.87, 0.62, 1)
theme_override_font_sizes/font_size = 24
text = "options"
horizontal_alignment = 1

[node name="WindowBaseSize" type="HBoxContainer" parent="Panel/AspectRatioContainer/Panel/CenterContainer/Options"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/AspectRatioContainer/Panel/CenterContainer/Options/WindowBaseSize"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "window_sase_size"

[node name="WindowBaseSizeButton" type="OptionButton" parent="Panel/AspectRatioContainer/Panel/CenterContainer/Options/WindowBaseSize"]
layout_mode = 2
size_flags_horizontal = 3

[node name="WindowStretchMode" type="HBoxContainer" parent="Panel/AspectRatioContainer/Panel/CenterContainer/Options"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/AspectRatioContainer/Panel/CenterContainer/Options/WindowStretchMode"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "window_stretch_mode"

[node name="OptionButton" type="OptionButton" parent="Panel/AspectRatioContainer/Panel/CenterContainer/Options/WindowStretchMode"]
layout_mode = 2
size_flags_horizontal = 3
selected = 1
item_count = 3
popup/item_0/text = "disabled"
popup/item_1/text = "canvas_items_2d"
popup/item_1/id = 1
popup/item_2/text = "viewport"
popup/item_2/id = 2

[node name="WindowStretchAspect" type="HBoxContainer" parent="Panel/AspectRatioContainer/Panel/CenterContainer/Options"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/AspectRatioContainer/Panel/CenterContainer/Options/WindowStretchAspect"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "Window Stretch Aspect"

[node name="OptionButton" type="OptionButton" parent="Panel/AspectRatioContainer/Panel/CenterContainer/Options/WindowStretchAspect"]
layout_mode = 2
size_flags_horizontal = 3
selected = 4
item_count = 5
popup/item_0/text = "ignore"
popup/item_1/text = "keep"
popup/item_1/id = 1
popup/item_2/text = "keep_width"
popup/item_2/id = 2
popup/item_3/text = "keep_height"
popup/item_3/id = 3
popup/item_4/text = "expand"
popup/item_4/id = 4

[node name="WindowScaleFactor" type="HBoxContainer" parent="Panel/AspectRatioContainer/Panel/CenterContainer/Options"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/AspectRatioContainer/Panel/CenterContainer/Options/WindowScaleFactor"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "window_scale_factor"

[node name="HSlider" type="HSlider" parent="Panel/AspectRatioContainer/Panel/CenterContainer/Options/WindowScaleFactor"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 100.0
min_value = 0.75
max_value = 5.0
step = 0.01
value = 1.0

[node name="Value" type="Label" parent="Panel/AspectRatioContainer/Panel/CenterContainer/Options/WindowScaleFactor"]
layout_mode = 2
size_flags_horizontal = 3
text = "100%"

[node name="WindowStretchScaleMode" type="HBoxContainer" parent="Panel/AspectRatioContainer/Panel/CenterContainer/Options"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/AspectRatioContainer/Panel/CenterContainer/Options/WindowStretchScaleMode"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "window_stretch_scale_mode"

[node name="OptionButton" type="OptionButton" parent="Panel/AspectRatioContainer/Panel/CenterContainer/Options/WindowStretchScaleMode"]
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 2
popup/item_0/text = "fractional"
popup/item_1/text = "integer"
popup/item_1/id = 1

[node name="HSeparator" type="HSeparator" parent="Panel/AspectRatioContainer/Panel/CenterContainer/Options"]
layout_mode = 2

[node name="GUIMaxAspectRatio" type="HBoxContainer" parent="Panel/AspectRatioContainer/Panel/CenterContainer/Options"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/AspectRatioContainer/Panel/CenterContainer/Options/GUIMaxAspectRatio"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "gui_max_aspect_ratio"

[node name="OptionButton" type="OptionButton" parent="Panel/AspectRatioContainer/Panel/CenterContainer/Options/GUIMaxAspectRatio"]
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 7
popup/item_0/text = "fit_to_window"
popup/item_1/text = "5:4"
popup/item_1/id = 1
popup/item_2/text = "4:3"
popup/item_2/id = 2
popup/item_3/text = "3:2"
popup/item_3/id = 3
popup/item_4/text = "16:10"
popup/item_4/id = 4
popup/item_5/text = "16:9"
popup/item_5/id = 5
popup/item_6/text = "21:9"
popup/item_6/id = 6

[node name="Language" type="HBoxContainer" parent="Panel/AspectRatioContainer/Panel/CenterContainer/Options"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/AspectRatioContainer/Panel/CenterContainer/Options/Language"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "language"

[node name="OptionButton" type="OptionButton" parent="Panel/AspectRatioContainer/Panel/CenterContainer/Options/Language"]
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 2
popup/item_0/text = "EN"
popup/item_1/text = "UA"
popup/item_1/id = 1

[node name="GUIMargin" type="HBoxContainer" parent="Panel/AspectRatioContainer/Panel/CenterContainer/Options"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/AspectRatioContainer/Panel/CenterContainer/Options/GUIMargin"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "gui_margin"

[node name="HSlider" type="HSlider" parent="Panel/AspectRatioContainer/Panel/CenterContainer/Options/GUIMargin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 100.0
max_value = 50.0

[node name="Value" type="Label" parent="Panel/AspectRatioContainer/Panel/CenterContainer/Options/GUIMargin"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/AspectRatioContainer/Panel/CenterContainer/Options"]
layout_mode = 2

[node name="Quit Button" type="Button" parent="Panel/AspectRatioContainer/Panel/CenterContainer/Options/HBoxContainer"]
layout_mode = 2
text = "quit_game"

[node name="Apply Button" type="Button" parent="Panel/AspectRatioContainer/Panel/CenterContainer/Options/HBoxContainer"]
layout_mode = 2
text = "apply"

[node name="Save Button" type="Button" parent="Panel/AspectRatioContainer/Panel/CenterContainer/Options/HBoxContainer"]
layout_mode = 2
text = "save"

[connection signal="gui_input" from="Panel/AspectRatioContainer/Panel/CenterContainer/Options/WindowBaseSize/WindowBaseSizeButton" to="." method="_on_option_button_gui_input"]
[connection signal="item_selected" from="Panel/AspectRatioContainer/Panel/CenterContainer/Options/WindowBaseSize/WindowBaseSizeButton" to="." method="_on_window_base_size_item_selected"]
[connection signal="ready" from="Panel/AspectRatioContainer/Panel/CenterContainer/Options/WindowBaseSize/WindowBaseSizeButton" to="." method="_on_window_base_size_button_ready"]
[connection signal="item_selected" from="Panel/AspectRatioContainer/Panel/CenterContainer/Options/WindowStretchMode/OptionButton" to="." method="_on_window_stretch_mode_item_selected"]
[connection signal="item_selected" from="Panel/AspectRatioContainer/Panel/CenterContainer/Options/WindowStretchAspect/OptionButton" to="." method="_on_window_stretch_aspect_item_selected"]
[connection signal="drag_ended" from="Panel/AspectRatioContainer/Panel/CenterContainer/Options/WindowScaleFactor/HSlider" to="." method="_on_window_scale_factor_drag_ended"]
[connection signal="item_selected" from="Panel/AspectRatioContainer/Panel/CenterContainer/Options/WindowStretchScaleMode/OptionButton" to="." method="_on_window_stretch_scale_mode_item_selected"]
[connection signal="item_selected" from="Panel/AspectRatioContainer/Panel/CenterContainer/Options/GUIMaxAspectRatio/OptionButton" to="." method="_on_gui_aspect_ratio_item_selected"]
[connection signal="item_selected" from="Panel/AspectRatioContainer/Panel/CenterContainer/Options/Language/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="drag_ended" from="Panel/AspectRatioContainer/Panel/CenterContainer/Options/GUIMargin/HSlider" to="." method="_on_gui_margin_drag_ended"]
[connection signal="pressed" from="Panel/AspectRatioContainer/Panel/CenterContainer/Options/HBoxContainer/Quit Button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Panel/AspectRatioContainer/Panel/CenterContainer/Options/HBoxContainer/Save Button" to="." method="_on_save_button_pressed"]
